<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText"
                android:id="@+id/name_et"
                android:hint="@string/hint_input_name"
                android:maxLength="256"
                tools:text="2249" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextView"
            android:text="@string/t1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/t_service_charge_et"
                style="@style/EditText"
                android:hint="@string/hint_service_charge_expression"
                android:inputType="numberDecimal"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/t_extra_charge_et"
                style="@style/EditText"
                android:hint="@string/hint_extra_charge_expression"
                android:inputType="numberDecimal"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextView"
            android:text="@string/d0"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/d_service_charge_et"
                style="@style/EditText"
                android:hint="@string/hint_service_charge_expression"
                android:inputType="numberDecimal"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/d_extra_charge_et"
                style="@style/EditText"
                android:hint="@string/hint_extra_charge_expression"
                android:inputType="numberDecimal"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
