<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <include layout="@layout/title" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText"
                android:id="@+id/name_et"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="256" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:id="@+id/bank_et"
            android:hint="@string/hint_bank"
            android:inputType="text"
            android:maxLength="256"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditText"
                    android:id="@+id/cardno_et"
                    android:hint="@string/hint_cardno"
                    android:paddingRight="@dimen/margin_large"
                    android:inputType="number"
                    android:maxLength="32"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/bankcard_scan_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_camera" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/card_type_et"
                    style="@style/EditText"
                    android:focusable="false"
                    android:hint="@string/hint_card_type"
                    android:paddingRight="@dimen/margin_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/bankcard_select_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_bank_card" />
        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText"
                android:id="@+id/credit_limit_et"
                android:hint="@string/hint_credit_limit"
                android:inputType="numberDecimal"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:id="@+id/statement_date_et"
            android:hint="@string/hint_statement_date"
            android:inputType="number"
            android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:id="@+id/payment_due_date_et"
            android:hint="@string/hint_payment_due_date_day"
            android:inputType="number"
            android:maxLength="2"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:id="@+id/payment_due_day_et"
            android:hint="@string/hint_payment_due_day"
            android:inputType="number"
            android:maxLength="2"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditText"
                android:id="@+id/description_et"
                android:hint="@string/hint_description"
                android:maxLength="512"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
