<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bankcard_et"
                    style="@style/EditText"
                    android:hint="@string/hint_bankcard"
                    android:paddingRight="@dimen/margin_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/bankcard_select_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_bank_card" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_balance_et"
                style="@style/EditText"
                android:hint="@string/hin_new_balance"
                android:inputType="numberDecimal"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/min_payment_et"
                style="@style/EditText"
                android:hint="@string/hint_min_payment"
                android:inputType="numberDecimal"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payment_et"
                style="@style/EditText"
                android:hint="@string/hint_payment"
                android:inputType="numberDecimal"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payment_due_date_et"
                style="@style/EditText"
                android:hint="@string/hint_payment_due_date"
                android:focusable="false"
                android:inputType="date|datetime" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
