<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_et"
                style="@style/EditText"
                android:hint="@string/hint_trans_date"
                android:focusable="false"
                android:inputType="date|datetime" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bankcard_et"
                    style="@style/EditText"
                    android:paddingRight="@dimen/margin_large"
                    android:singleLine="false"
                    android:hint="@string/hint_bankcard" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/bankcard_select_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_bank_card" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_et"
                style="@style/EditText"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/service_charge_et"
                    style="@style/EditText"
                    android:paddingRight="@dimen/margin_large"
                    android:hint="@string/hint_service_charge"
                    android:inputType="numberDecimal"
                    android:maxLength="12" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/settle_type_select_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_settle" />
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/extra_charge_et"
                style="@style/EditText"
                android:hint="@string/hint_extra_charge"
                android:inputType="numberDecimal"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
