<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:layout_marginBottom="@dimen/margin"
    app:contentPadding="@dimen/margin"
    android:clickable="true"
    app:cardCornerRadius="@dimen/margin_smaller"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bankcard"
            style="@style/TextView"
            tools:text="中国银行 | 小方 3326" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        style="@style/TextView.Second"
                        android:text="@string/label_new_balance" />
                    <TextView
                        android:id="@+id/new_balance_tv"
                        style="@style/TextView"
                        android:textSize="@dimen/font_middle"
                        android:layout_marginLeft="@dimen/margin_smaller"
                        android:textIsSelectable="true"
                        tools:text="800" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        style="@style/TextView.Second"
                        android:text="@string/label_have_balance" />
                    <TextView
                        android:id="@+id/have_balance_tv"
                        style="@style/TextView"
                        android:textStyle="bold"
                        android:textSize="@dimen/font_middle"
                        android:layout_marginLeft="@dimen/margin_smaller"
                        android:textIsSelectable="true"
                        tools:text="800" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/statement_day_container"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/new_statement_day_tv"
                    style="@style/TextView"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_larger"
                    android:layout_gravity="center_vertical"
                    tools:text="  6" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_smaller">
                    <TextView
                        android:id="@+id/day_label_tv"
                        style="@style/TextView"
                        android:textSize="@dimen/font_small"
                        android:text="@string/label_statement_day" />
                <TextView
                    android:id="@+id/payment_due_date_tv"
                    style="@style/TextView.Second"
                    tools:text="01-01" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:paddingLeft="@dimen/margin"
                android:paddingRight="@dimen/margin"
                android:paddingTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_small"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_radius_button"
                android:text="@string/repayment"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
